<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    tools:context=".activity.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="343dp"
        android:layout_height="305dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/city_field"
            android:layout_width="284dp"
            android:layout_height="31dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/weather_icon"
            android:layout_width="136dp"
            android:layout_height="126dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:textSize="100sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_field" />

        <TextView
            android:id="@+id/current_temperature_field"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weather_icon" />

        <TextView
            android:id="@+id/details_field"
            android:layout_width="274dp"
            android:layout_height="27dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city_field" />

    </android.support.constraint.ConstraintLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="261dp"
        android:layout_height="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.327"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="30sp">

            <TextView
                android:id="@+id/humidityTxt"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginRight="16dp"
                android:gravity="right|center_vertical"
                android:text="@string/humidity_txt"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/humidity_field"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF"
                app:layout_constraintTop_toBottomOf="@+id/updated_field" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="30sp">

            <TextView
                android:id="@+id/pressureTxt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="16dp"
                android:gravity="right|center_vertical"
                android:text="@string/pressure_txt"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/pressure_field"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF"
                app:layout_constraintTop_toBottomOf="@+id/humidity_field"
                tools:layout_editor_absoluteX="55dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="30sp">

            <TextView
                android:id="@+id/minTempTxt"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginRight="16dp"
                android:gravity="right|center_vertical"
                android:text="@string/min_temperature_txt"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/minTempField"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF"
                app:layout_constraintTop_toBottomOf="@+id/humidity_field"
                tools:layout_editor_absoluteX="55dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="30sp">

            <TextView
                android:id="@+id/maxTempTxt"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginRight="16dp"
                android:gravity="right|center_vertical"
                android:text="@string/max_temperature_txt"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/maxTempField"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF"
                app:layout_constraintTop_toBottomOf="@+id/humidity_field"
                tools:layout_editor_absoluteX="55dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="30sp">

            <TextView
                android:id="@+id/windSpeedTxt"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginRight="16dp"
                android:gravity="right|center_vertical"
                android:text="@string/wind_speed_txt"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/windSpeedField"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF"
                app:layout_constraintTop_toBottomOf="@+id/humidity_field"
                tools:layout_editor_absoluteX="55dp" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/goToForecast"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal|center"
        android:lineSpacingExtra="24sp"
        android:paddingBottom="16px"
        android:text="@string/forecast_icon"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/updateWeatherBtn"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/update_btn"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/goToListBtn"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/list__icon"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>